--- a/index.html
+++ b/index.html
@@ -935,7 +935,8 @@
                                 loading="lazy"
                               />
                             </div>
-                            <h6 class="ptf-partner-box__title">Chartred Bus</h6>
+                            <h6 class="ptf-partner-box__title">                              Chartered Bus
+</h6>
                           </div>
                         </a>
                       </div>
