--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
       margin-top: 0;
       margin-bottom: 0;
     }
+    @media (max-width: 767.98px) {
+      .cen {
+        text-align: center;
+      }
+    }
   </style>
   <body style="padding-bottom: 0%">
     <!--Site Wrapper-->
@@ -501,7 +506,7 @@
                       data-aos="fade"
                       data-aos-delay="0"
                     >
-                      <h2 style="font-weight: 500" class="h1 large-heading">
+                      <h2 style="font-weight: 500" class="h1 large-heading cen">
                         Our
                         <span class="br-mobile-hide"><br /></span>
                         Services
@@ -789,7 +794,7 @@
                   data-aos="fade"
                   data-aos-delay="0"
                 >
-                  <h2 style="font-weight: 500" class="h1 large-heading">
+                  <h2 style="font-weight: 500" class="h1 large-heading cen">
                     Our Commitment
                   </h2>
                 </div>
@@ -832,7 +837,7 @@
                       data-aos="fade"
                       data-aos-delay="0"
                     >
-                      <h2 style="font-weight: 500" class="h1 large-heading">
+                      <h2 style="font-weight: 500" class="h1 large-heading cen">
                         Clients we’ve interacted with:
                       </h2>
                     </div>
@@ -935,8 +940,9 @@
                                 loading="lazy"
                               />
                             </div>
-                            <h6 class="ptf-partner-box__title">                              Chartered Bus
-</h6>
+                            <h6 class="ptf-partner-box__title">
+                              Chartered Bus
+                            </h6>
                           </div>
                         </a>
                       </div>
