--- a/why1.html
+++ b/why1.html
@@ -344,7 +344,13 @@
                                     alt="Tailored Content"
                                     class="img-fluid"
                                     loading="lazy"
-                                    style="width: 600px; height: 500px"
+                                    style="
+                                      max-width: 600px;
+                                      height: auto;
+                                      margin: 0 auto;
+                                      display: block;
+                                      padding-bottom: 20px;
+                                    "
                                   />
                                 </div>
                               </div>
@@ -382,7 +388,13 @@
                                     alt="Strategic Approach"
                                     class="img-fluid"
                                     loading="lazy"
-                                    style="width: 600px; height: 500px"
+                                    style="
+                                      max-width: 600px;
+                                      height: auto;
+                                      margin: 0 auto;
+                                      display: block;
+                                      padding-bottom: 20px;
+                                    "
                                   />
                                 </div>
                               </div>
@@ -419,7 +431,13 @@
                                     alt="Constant Innovation"
                                     class="img-fluid"
                                     loading="lazy"
-                                    style="width: 600px; height: 500px"
+                                    style="
+                                      max-width: 600px;
+                                      height: auto;
+                                      margin: 0 auto;
+                                      display: block;
+                                      padding-bottom: 20px;
+                                    "
                                   />
                                 </div>
                               </div>
@@ -457,7 +475,13 @@
                                     alt="Collaborative Partnership"
                                     class="img-fluid"
                                     loading="lazy"
-                                    style="width: 600px; height: 500px"
+                                    style="
+                                      max-width: 600px;
+                                      height: auto;
+                                      margin: 0 auto;
+                                      display: block;
+                                      padding-bottom: 20px;
+                                    "
                                   />
                                 </div>
                               </div>
