--- a/index.html
+++ b/index.html
@@ -1975,7 +1975,7 @@
 
                             <a
                               style="font-weight: 500"
-                              class="fz-40 has-black-color"
+                              class="fz-30 has-black-color"
                               href="mailto:mail@orangetag.net"
                               >mail@orangetag.net</a
                             >
@@ -1993,7 +1993,7 @@
                             ></a>
                             <a
                               style="margin-left: 10px"
-                              class="ptf-social-icon ptf-social-icon--style-1 whatsapp"
+                              class="fz-30 whatsapp"
                               href="https://wa.me/919725425258"
                               target="_blank"
                               >+91 97254 25258</a
