--- a/why1.html
+++ b/why1.html
@@ -544,11 +544,12 @@
                           />
                         </a>
                         <div
+                          style="font-weight: 500"
                           class="ptf-footer-heading has-black-color"
                           style="max-width: 37.5rem"
                         >
                           Join us on a journey of crafting engaging, lasting
-                          content—together.
+                          <br />content—together
                         </div>
                       </div>
                     </div>
@@ -565,7 +566,7 @@
                         >
                           <h4
                             class="ptf-widget-title"
-                            style="margin-bottom: 10px"
+                            style="margin-bottom: 10px; font-weight: 500"
                           >
                             Let’s Talk!
                           </h4>
@@ -577,7 +578,8 @@
                             380058
 
                             <a
-                              class="fz-40 has-black-color"
+                              style="font-weight: 500"
+                              class="fz-30 has-black-color"
                               href="mailto:mail@orangetag.net"
                               >mail@orangetag.net</a
                             >
@@ -595,7 +597,7 @@
                             ></a>
                             <a
                               style="margin-left: 10px"
-                              class="ptf-social-icon ptf-social-icon--style-1 whatsapp"
+                              class="fz-30 whatsapp"
                               href="https://wa.me/919725425258"
                               target="_blank"
                               >+91 97254 25258</a
