--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                           class="ptf-service-box__content"
                           style="padding-right: 0"
                         >
-                          <p style="text-align: justify; color: #000000">
+                          <p style="text-align: left; color: #000000">
                             Harness the power of social media with our expert
                             management services. From content creation to
                             engagement strategies, we ensure your brand stays
@@ -582,7 +582,7 @@
                           Product Styling
                         </h5>
                         <div class="ptf-service-box__content">
-                          <p style="text-align: justify; color: #000000">
+                          <p style="text-align: left; color: #000000">
                             Immerse your audience in visually stunning content
                             with our meticulous art direction and product
                             styling services. We transform your brand's identity
@@ -647,7 +647,7 @@
                           Creating In-House <br />Reels
                         </h5>
                         <div class="ptf-service-box__content">
-                          <p style="text-align: justify; color: #000000">
+                          <p style="text-align: left; color: #000000">
                             Stay ahead of the curve with our in-house reel
                             creation services. We specialize in producing
                             engaging and shareable short-form videos that
@@ -677,7 +677,7 @@
                           Branding & Packaging Design
                         </h5>
                         <div class="ptf-service-box__content">
-                          <p style="text-align: justify; color: #000000">
+                          <p style="text-align: left; color: #000000">
                             We craft distinctive brand identities and packaging
                             that tell your story and stand out on the shelf.
                             From logos and visual language to product labels and
@@ -742,7 +742,7 @@
                           Marketing Collaterals
                         </h5>
                         <div class="ptf-service-box__content">
-                          <p style="text-align: justify; color: #000000">
+                          <p style="text-align: left; color: #000000">
                             We design a full suite of marketing tools—from
                             brochures, flyers, and e-catalogues to booth
                             designs, banners, and brand presentations. Whether
@@ -791,11 +791,13 @@
                         class="img-fluid mb-2"
                       />
                       <p class="text-muted small">
+                        Scan to view our latest work, or
                         <a
                           href="https://drive.google.com/file/d/1hTgZ_TA__5TaoWZq0baJspv7VLNr3pbu/view?usp=sharing"
-                          >Scan to view our latest work, or click here to
-                          explore our deck.
-                        </a>
+                          style="color: #f57528"
+                          >Click Here</a
+                        >
+                        to explore our deck.
                       </p>
                     </div>
                   </div>
@@ -825,7 +827,7 @@
                 ></div>
 
                 <div class="fz-24">
-                  <p style="text-align: justify; word-wrap: break-word">
+                  <p style="text-align: left; word-wrap: break-word">
                     At OrangeTag Media, we don't just work for you; we work with
                     you. Your success is our success, and we are committed to
                     pushing the boundaries of creativity and technology to
@@ -1992,15 +1994,15 @@
                             1304-09, 13th floor, D block, Sun Central Place, Nr.
                             Bopal Crossroad, SP Ring Road, Ambli, Ahmedabad
                             380058
-                            <br />
+
                             <a
                               style="font-weight: 500"
                               class="fz-30 has-black-color"
                               href="mailto:mail@orangetag.net"
                               >mail@orangetag.net</a
                             >
+                            <br>
                           </p>
-
                           <div class="ptf-footer-socials has-black-color">
                             <a
                               class="ptf-social-icon ptf-social-icon--style-1 whatsapp"
