--- a/about-us.html
+++ b/about-us.html
@@ -217,9 +217,7 @@
                     </li>
                     <li class="menu-item-has-children two-columns">
                       <a href="why1.html"
-                        ><span class="customize_nav"
-                          >Why Orange Tag Media?</span
-                        >
+                        ><span class="customize_nav">Why OrangeTag Media?</span>
                       </a>
                     </li>
                   </ul>
@@ -271,9 +269,7 @@
                 </li>
                 <li class="menu-item-has-children two-columns">
                   <a href="why1.html"
-                    ><span class="customize_nav1"
-                      >Why Orange Tag Media?</span
-                    ></a
+                    ><span class="customize_nav1">Why OrangeTag Media?</span></a
                   >
                 </li>
               </ul>
@@ -341,7 +337,7 @@
 
                             <!--Spacer-->
 
-                            <p class="fz-24" style="text-align: justify">
+                            <p class="fz-24" style="text-align: left">
                               <strong>OrangeTag Media</strong> is a full-stack
                               social media agency committed to enhancing your
                               brand’s online presence. In today’s fast-paced
@@ -424,8 +420,8 @@
                           class="ptf-footer-heading has-black-color"
                           style="max-width: 37.5rem"
                         >
-                          Join us on a journey of crafting engaging, lasting
-                          <br />content—together
+                          Join us on a journey <br />of crafting engaging,<br />
+                          lasting content—together
                         </div>
                       </div>
                     </div>
