--- a/index.html
+++ b/index.html
@@ -345,9 +345,7 @@
                     </li>
                     <li class="menu-item-has-children two-columns">
                       <a href="why1.html"
-                        ><span class="customize_nav"
-                          >Why Orange Tag Media?</span
-                        >
+                        ><span class="customize_nav">Why OrangeTag Media?</span>
                       </a>
                     </li>
                   </ul>
@@ -399,9 +397,7 @@
                 </li>
                 <li class="menu-item-has-children two-columns">
                   <a href="why1.html"
-                    ><span class="customize_nav1"
-                      >Why Orange Tag Media?</span
-                    ></a
+                    ><span class="customize_nav1">Why OrangeTag Media?</span></a
                   >
                 </li>
               </ul>
@@ -445,7 +441,7 @@
                   <div class="col-12">
                     <!-- Desktop Banner -->
                     <img
-                      src="assets/img/banner/banner.jpeg"
+                      src="assets/img/banner/banner.png"
                       alt="Banner"
                       loading="lazy"
                       class="custom-banner desktop-banner"
@@ -458,7 +454,7 @@
                       alt="Mobile Banner"
                       loading="lazy"
                       class="custom-banner mobile-banner"
-                      style="width: 100%; height: 630px"
+                      style="width: 100%; height: 530px"
                     />
                   </div>
                 </div>
@@ -586,8 +582,7 @@
                             Immerse your audience in visually stunning content
                             with our meticulous art direction and product
                             styling services. We transform your brand's identity
-                            into a captivating visual narrative, leaving a
-                            lasting impression on your audience.
+                            into a captivating visual narrative.
                           </p>
                         </div>
                       </div>
@@ -747,7 +742,7 @@
                             brochures, flyers, and e-catalogues to booth
                             designs, banners, and brand presentations. Whether
                             digital or print, every piece is crafted to reflect
-                            your brand and leaves a lasting impression.
+                            your brand and resonates with your audience.
                           </p>
                         </div>
                       </div>
@@ -1966,8 +1961,8 @@
                           class="ptf-footer-heading has-black-color"
                           style="max-width: 37.5rem"
                         >
-                          Join us on a journey of crafting engaging, lasting
-                          <br />content—together
+                          Join us on a journey <br />of crafting engaging,<br />
+                          lasting content—together
                         </div>
                       </div>
                     </div>
@@ -1988,21 +1983,14 @@
                           >
                             Let’s Talk!
                           </h4>
-                          <p class="fz-23">
-                            OrangeTag Media LLP
-                            <br />
-                            1304-09, 13th floor, D block, Sun Central Place, Nr.
-                            Bopal Crossroad, SP Ring Road, Ambli, Ahmedabad
-                            380058
 
-                            <a
-                              style="font-weight: 500"
-                              class="fz-30 has-black-color"
-                              href="mailto:mail@orangetag.net"
-                              >mail@orangetag.net</a
-                            >
-                            <br>
-                          </p>
+                          <a
+                            style="font-weight: 500"
+                            class="fz-30 has-black-color"
+                            href="mailto:mail@orangetag.net"
+                            >mail@orangetag.net</a
+                          >
+                          <br />
                           <div class="ptf-footer-socials has-black-color">
                             <a
                               class="ptf-social-icon ptf-social-icon--style-1 whatsapp"
@@ -2022,6 +2010,14 @@
                               >+91 97254 25258</a
                             >
                           </div>
+
+                          <p class="fz-23">
+                            OrangeTag Media LLP
+                            <br />
+                            1304-09, 13th floor, D block, Sun Central Place, Nr.
+                            Bopal Crossroad, SP Ring Road, Ambli, Ahmedabad
+                            380058
+                          </p>
                         </div>
                       </div>
                     </div>
