--- a/why1.html
+++ b/why1.html
@@ -205,7 +205,7 @@
                     <li class="menu-item-has-children two-columns">
                       <a href="why1.html"
                         ><span class="customize_nav active"
-                          >Why Orange Tag Media?</span
+                          >Why OrangeTag Media?</span
                         >
                       </a>
                     </li>
@@ -258,9 +258,7 @@
                 </li>
                 <li class="menu-item-has-children two-columns">
                   <a href="why1.html"
-                    ><span class="customize_nav1"
-                      >Why Orange Tag Media?</span
-                    ></a
+                    ><span class="customize_nav1">Why OrangeTag Media?</span></a
                   >
                 </li>
               </ul>
@@ -548,8 +546,8 @@
                           class="ptf-footer-heading has-black-color"
                           style="max-width: 37.5rem"
                         >
-                          Join us on a journey of crafting engaging, lasting
-                          <br />content—together
+                          Join us on a journey <br />of crafting engaging,<br />
+                          lasting content—together
                         </div>
                       </div>
                     </div>
