--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
         width: 100%;
         height: 660px;
         display: block;
+        overflow: hidden;
+      }
+
+      .custom-banner img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
       }
     }
     /* Hide mobile image by default */
@@ -289,6 +297,14 @@
     @media (max-width: 767.98px) {
       .cen {
         text-align: center;
+      }
+    }
+    .Arove {
+      padding-top: 20px;
+    }
+    @media (max-width: 767.98px) {
+      .Arove {
+        padding-top: 0px;
       }
     }
   </style>
@@ -433,7 +449,7 @@
         <!--Main-->
         <main class="ptf-main">
           <article class="ptf-page ptf-page--home-default">
-            <section style="background-color: #ffffff !important">
+            <section style="background-color: #ffffff !important" class="Arove">
               <div class="ptf-spacer" style="--ptf-xxl: 6rem"></div>
 
               <div class="container-xxl p-0" style="max-width: 100%">
@@ -445,7 +461,6 @@
                       alt="Banner"
                       loading="lazy"
                       class="custom-banner desktop-banner"
-                      style="width: 100%; height: 500px; object-fit: cover"
                     />
 
                     <!-- Mobile Banner -->
