--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                     you. Your success is our success, and we are committed to
                     pushing the boundaries of creativity and technology to
                     achieve your goals. Whether you're a start-up looking to
-                    make waves or an established brand seeking a fresh
+                    make waves or an legacy brand seeking a fresh
                     perspective, OrangeTag Media is your trusted partner in the
                     ever-evolving world of social media.
                   </p>
